Fixed About Me formatting on small display

--- a/angular_app/src/app/about-me/about-me.component.scss
+++ b/angular_app/src/app/about-me/about-me.component.scss
@@ -1,5 +1,3 @@
-/* Base layout: two columns */
-
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -25,18 +23,18 @@
 }
 
 .column-text {
-    flex: 1 1 500px;
+    flex: 1 1 400px;
     min-width: 400px;
 }
 
 .column-text-large {
     flex: 3 1 200px;
-    min-width: 400px;
+    min-width: 300px;
 }
 
 .column-photos {
-    flex: 1 1 500px;
-    min-width: 500px;
+    flex: 1 1 400px;
+    min-width: 300px;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -104,7 +102,7 @@
 
 .photo-wrapper2 img {
     display: block;
-    width: 500px;
+    width: 400px;
     object-fit: cover;
     border: 4px solid white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
